added all videos

--- a/lectures/Week3.ipynb
+++ b/lectures/Week3.ipynb
@@ -8,7 +8,7 @@
     "\n",
     "## Overview\n",
     "\n",
-    "This week we'll be getting into the principles of machine learning, while starting to get to know the dataset. The lecture will feature an overview of fundamentals of machine learning (videos), and we'll (_finally_) start working on getting to know the dataset we'll be crunching over the next few weeks.\n",
+    "This week we'll be getting into the principles of machine learning, while starting to get to know the dataset. The lecture will feature an overview of fundamentals of machine learning (videos by our resident machine learning expert Ole Winter), and we'll (_finally_) start working on getting to know the dataset we'll be crunching over the next few weeks.\n",
     "\n",
     "Don't forget that the overarching goal of the class is to do _predictive policing_ in the style of the tv-show [_NUMB3ERS_](https://www.youtube.com/watch?v=dSOrAQMXTcc) or Minority Report. In order to do that, however, we need to understand the patterns in the crime dataset. That's what we'll be doing today.\n",
     "\n",
@@ -16,20 +16,44 @@
     "* Part 2 is the \"main course\", where we'll be playing around with real data, plotting and counting.\n",
     "* Part 3 is about machine learning, featuring a couple of videos with Ole Winter from DTU Compute and some simple questions from the book.\n",
     "* And finally, in Part 4, we plot a little bit of the detailed GPS data.\n",
-    "* In part 5, which is optional, you get to generalize the KNN example to the SF dataset.\n",
+    "* In part 5 you get to (optionally) generalize the book's KNN example to the SF dataset.\n",
     "\n",
-    "First, a little unofficial video greeting from me - then, let's get to work."
+    "First, a little unofficial video 1 minute greeting from me - then, let's get to work."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "        <iframe\n",
+       "            width=\"400\"\n",
+       "            height=\"225\"\n",
+       "            src=\"https://www.youtube.com/embed/CEgGxQFIYsM\"\n",
+       "            frameborder=\"0\"\n",
+       "            allowfullscreen\n",
+       "        ></iframe>\n",
+       "        "
+      ],
+      "text/plain": [
+       "<IPython.lib.display.YouTubeVideo at 0x104c0d990>"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# mini sune greeting"
+    "# mini sune greeting\n",
+    "from IPython.display import YouTubeVideo\n",
+    "YouTubeVideo(\"CEgGxQFIYsM\",width=400, height=225)"
    ]
   },
   {
@@ -98,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -157,29 +181,109 @@
    "source": [
     "## Part 3: Machine Learning (DSFS Chapter 11)\n",
     "\n",
-    "We won't go too deep with machine learning today, but after all it's time to watch some relaxing video lectures on the fundamentals of Machine learning."
+    "We won't go too deep with machine learning today, but after all it's time to watch some video lectures on the fundamentals of Machine learning. The lectures have been prepared by our very own expert, Ole Winter, whose work focuses on Machine Learning. The lectures + slides have been prepared especially for you guys by Ole, and lovingly edited by yours truly."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "        <iframe\n",
+       "            width=\"800\"\n",
+       "            height=\"450\"\n",
+       "            src=\"https://www.youtube.com/embed/SsCYF9tDY9Y\"\n",
+       "            frameborder=\"0\"\n",
+       "            allowfullscreen\n",
+       "        ></iframe>\n",
+       "        "
+      ],
+      "text/plain": [
+       "<IPython.lib.display.YouTubeVideo at 0x104c0d8d0>"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# video 1: Ole Winter on Machine Learning "
+    "# Ole Winter, \"What is Machine Learning\" \n",
+    "YouTubeVideo(\"SsCYF9tDY9Y\",width=800, height=450)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "        <iframe\n",
+       "            width=\"800\"\n",
+       "            height=\"450\"\n",
+       "            src=\"https://www.youtube.com/embed/MHhlAtw3Ces\"\n",
+       "            frameborder=\"0\"\n",
+       "            allowfullscreen\n",
+       "        ></iframe>\n",
+       "        "
+      ],
+      "text/plain": [
+       "<IPython.lib.display.YouTubeVideo at 0x104c0d690>"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# video 2: More of Ole on Machine Learning"
+    "# Ole on Model Selection\n",
+    "YouTubeVideo(\"MHhlAtw3Ces\",width=800, height=450)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "        <iframe\n",
+       "            width=\"800\"\n",
+       "            height=\"450\"\n",
+       "            src=\"https://www.youtube.com/embed/RZmitKn220Q\"\n",
+       "            frameborder=\"0\"\n",
+       "            allowfullscreen\n",
+       "        ></iframe>\n",
+       "        "
+      ],
+      "text/plain": [
+       "<IPython.lib.display.YouTubeVideo at 0x104c0d5d0>"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Ole on feature extraction and selection\n",
+    "YouTubeVideo(\"RZmitKn220Q\",width=800, height=450)"
    ]
   },
   {
@@ -247,6 +351,40 @@
     "> * How does K-nearest neighbors work? Explain in your own words.\n",
     "> * Explain in your own words: What is the curse of dimensionality? Use figure 12-6 to as part of your explanation.\n",
     "> * **Optional**: Adjust the example on pp 153 to work on actual crime data (it's OK to just choose a few data points to work from). And use `geoplotlib` to visualize the result."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "        <iframe\n",
+       "            width=\"800\"\n",
+       "            height=\"450\"\n",
+       "            src=\"https://www.youtube.com/embed/OE159z8kC-Y\"\n",
+       "            frameborder=\"0\"\n",
+       "            allowfullscreen\n",
+       "        ></iframe>\n",
+       "        "
+      ],
+      "text/plain": [
+       "<IPython.lib.display.YouTubeVideo at 0x104c0d650>"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Ole on K-nearest-neighbors\n",
+    "YouTubeVideo(\"OE159z8kC-Y\",width=800, height=450)"
    ]
   },
   {
