improved final exercise

--- a/lectures/Week3.ipynb
+++ b/lectures/Week3.ipynb
@@ -342,15 +342,7 @@
    "source": [
     "## Part 5: K-nearest-neighbors. \n",
     "\n",
-    "Hmm. I think the exercise are starting to extend beyond the 5 ECTS time-limit, so the difficult part of the K-nearest-neighbor exercise will be optional. You will have to read the chapter and answer a few general questions.\n",
-    "\n",
-    "> _Reading_: DSFS Chapter 12. Pay special attention to the example on page 153-156.\n",
-    "\n",
-    "---\n",
-    "> _Exercises_: K-nearest-neighbors\n",
-    "> * How does K-nearest neighbors work? Explain in your own words.\n",
-    "> * Explain in your own words: What is the curse of dimensionality? Use figure 12-6 to as part of your explanation.\n",
-    "> * **Optional**: Adjust the example on pp 153 to work on actual crime data (it's OK to just choose a few data points to work from). And use `geoplotlib` to visualize the result."
+    "Hmm. I think the exercise are starting to extend beyond the 5 ECTS time-limit, so the difficult part of the K-nearest-neighbor exercise will be optional. You will have to read the chapter and answer a few general questions."
    ]
   },
   {
@@ -385,6 +377,27 @@
    "source": [
     "# Ole on K-nearest-neighbors\n",
     "YouTubeVideo(\"OE159z8kC-Y\",width=800, height=450)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "> _Reading_: DSFS Chapter 12. Pay special attention to the example on page 153-156.\n",
+    "\n",
+    "---\n",
+    "> _Exercises_: K-nearest-neighbors\n",
+    "> * How does K-nearest neighbors work? Explain in your own words.\n",
+    "> * Explain in your own words: What is the curse of dimensionality? Use figure 12-6 to as part of your explanation.\n",
+    "> * **Optional, but recommended**: Adjust the example on pp 153 to work on actual crime data. \n",
+    ">   - Since we know from the exercises above that focus crimes `PROSTITUTION`, `DRUG/NARCOTIC` and `DRIVING UNDER THE INFLUENCE` tend to be concentrated in certain neighborhoods, let's focus on those crime types.\n",
+    ">   - Begin by using `geoplotlib` to plot all incidents of all three crime types on a map using three different colors.\n",
+    ">   - Now create a square grid of point that runs over SF. You get to decide the grid-size, but I recommend somewhere between $25 \\times 25$ and $100 \\times 100$ points.\n",
+    ">   - Create three maps. One, where you color each point according to its nearest neighbor, another where you color each point according to the 3 nearest neighbors, and finally one where you color according to the 5 nearest neighbors.\n",
+    "\n",
+    "Note that these maps would _actually be useful_ to the SFPD when they decide on patroling, special"
    ]
   },
   {
