--- a/lectures/Week3.ipynb
+++ b/lectures/Week3.ipynb
@@ -157,7 +157,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "There's much more to work on in this dataset (for example, I also explored if certain crimes tend to happen on certain week-days ... also some interesting patterns there!), but we have lots to do, so we must rush onwards. \n",
+    "There's much more to work on in this dataset (for example, I also explored if certain crimes tend to happen on certain week-days ... [also some interesting patterns there!](https://dl.dropboxusercontent.com/u/153071/teaching/02806_2016/weekdays.png)), but we have lots to do, so we must rush onwards. \n",
     "\n",
     "The next thing we'll be looking into is how crimes break down across the 10 districts in San Francisco.\n",
     "\n",
@@ -391,7 +391,7 @@
     "> _Exercises_: K-nearest-neighbors\n",
     "> * How does K-nearest-neighbors work? Explain in your own words.\n",
     "> * Explain in your own words: What is the curse of dimensionality? Use figure 12-6 to as part of your explanation.\n",
-    "> * **Optional, but recommended**: Adjust the example on pp 153 to work on actual crime data. \n",
+    "> * **Optional, but recommended (because it's awesome)**: Adjust the example on pp 153 to work on actual crime data. \n",
     ">   - Since we know from the exercises above that focus crimes `PROSTITUTION`, `DRUG/NARCOTIC` and `DRIVING UNDER THE INFLUENCE` tend to be concentrated in certain neighborhoods, let's focus on those crime types since they will make the most sense for the 2d version of KNN.\n",
     ">   - Begin by using `geoplotlib` to plot all incidents of all three crime types on a map using three different colors.\n",
     ">   - Now create a square grid of point that runs over SF. You get to decide the grid-size, but I recommend somewhere between $25 \\times 25$ and $100 \\times 100$ points.\n",
