--- a/lectures/Week4.ipynb
+++ b/lectures/Week4.ipynb
@@ -219,9 +219,12 @@
     "> * (Optional) Estimate how the regression parameters deviate by using bootstrapping. In this case, you can pick a small chunk of the data (500 cases for each output), run the regression on half of the selected data 100 times and then calculate the mean and standard deviation of the fit parameters.\n",
     "\n",
     "Just to give you guys a sense of what you should be expecting, our performance values were:\n",
-    "* `accuracy`:  0.891218\n",
-    "* `precision`: 0.783191\n",
-    "* `recall`:    0.941435\n",
+    "\n",
+    "* `accuracy`:  0.89\n",
+    "* `precision`: 0.78\n",
+    "* `recall`:    0.94\n",
+    "\n",
+    "But these are just guidelines and your results might be different.\n",
     "\n",
     "And the rescaled coordinates and decision boundary looks something like this:\n",
     "\n",
