some changes to week4

--- a/lectures/Week4.ipynb
+++ b/lectures/Week4.ipynb
@@ -16,7 +16,7 @@
     "\n",
     " * Sune will address the class and focus on two things: Signing in to `peergrade.io` and how we like that the book is \"from scratch\", but that we generally recommend that you guys use tools out there (such as `scikit-learn`) when you solve the exercises.\n",
     " * As a call-back to last time, we start by explore KNN to study the patterns of Drugs, Prostitution, and Drunk driving across SF. So if you did the optional exercise last time, this one will be easy\n",
-    " * \n"
+    " * Then we'll play around with regression models and use them to catch a criminal!"
    ]
   },
   {
