initial lecture 5 commit

--- a/lectures/Week5.ipynb
+++ b/lectures/Week5.ipynb
@@ -26,35 +26,14 @@
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "\n",
-       "        <iframe\n",
-       "            width=\"600\"\n",
-       "            height=\"400\"\n",
-       "            src=\"https://docs.google.com/forms/d/1VsgNpMMQk-sZoZD2pxeXmKFXfnhZ0EGwvQ3YDNZbGwA/viewform?embedded=true\"\n",
-       "            frameborder=\"0\"\n",
-       "            allowfullscreen\n",
-       "        ></iframe>\n",
-       "        "
-      ],
-      "text/plain": [
-       "<IPython.lib.display.IFrame at 0x1051059d0>"
-      ]
-     },
-     "execution_count": 1,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "from IPython.display import IFrame, YouTubeVideo\n",
-    "IFrame(\"https://docs.google.com/forms/d/1VsgNpMMQk-sZoZD2pxeXmKFXfnhZ0EGwvQ3YDNZbGwA/viewform?embedded=true\", \n",
-    "       width=600, height=400)\n",
+    "#IFrame(\"https://docs.google.com/forms/d/1VsgNpMMQk-sZoZD2pxeXmKFXfnhZ0EGwvQ3YDNZbGwA/viewform?embedded=true\", \n",
+    "#       width=600, height=400)\n",
+    "# I'm not showing the entire questionnaire in the iframe below, but you should be able to scroll within the frame.\n",
     "\n",
-    "# I'm not showing the entire questionnaire in the iframe below, but you should be able to scroll within the frame."
+    "# NOTE: I'VE DISABLED THE QUESTIONNAIRE FOR NOW."
    ]
   },
   {
@@ -92,7 +71,7 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.YouTubeVideo at 0x1051057d0>"
+       "<IPython.lib.display.YouTubeVideo at 0x1047f5890>"
       ]
      },
      "execution_count": 2,
@@ -145,7 +124,7 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.YouTubeVideo at 0x105105890>"
+       "<IPython.lib.display.YouTubeVideo at 0x1047f5d90>"
       ]
      },
      "execution_count": 3,
@@ -247,7 +226,7 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.YouTubeVideo at 0x105105690>"
+       "<IPython.lib.display.YouTubeVideo at 0x1047f5850>"
       ]
      },
      "execution_count": 4,
