clarified the wording of part 4

--- a/lectures/Week6.ipynb
+++ b/lectures/Week6.ipynb
@@ -126,7 +126,7 @@
     "\n",
     "---\n",
     "\n",
-    "> _Exercises_: Put something simple on the web.\n",
+    "> _Exercises_: Put something simple on the web. For this exercise, I want you to modify the code from the book and place the resulting code on an actual website that's live on the internet (for example the github site that you started during Part 3 above).\n",
     "> \n",
     "> * Create your own version of example 5-14 with the following tweaks\n",
     ">  - It should go on the website you've just set up\n",
