--- a/lectures/Week5.ipynb
+++ b/lectures/Week5.ipynb
@@ -255,8 +255,9 @@
     "> * And by the way: The fit only gets better when we add more means - why not keep adding more of them: Explain in your own words why it makes sense to stop around a knee-point.\n",
     "> * Another way of estimating the right number of clusters in a $K$-means problem is _stability analysis_. The idea is the following\n",
     ">   - For each $K = 2,\\ldots,10$ generate $N = 10$ clusterings based on random 50% of data (or some other fraction of data/bootstrap).\n",
-    ">   - Calculate the pairwise similarity between the clusterings. \n",
-    ">   - We now define _stability_ for some value of $K$ as average pairwise similarity of the $N$ clustering, where the similarity is the cosine distance $\\frac{\\mathbf{c}_i^K\\cdot\\mathbf{c}_j^K}{||\\mathbf{c}_i^K||\\,||\\mathbf{c}_j^K||}$ between centroid vectors $\\mathbf{c}_i^K$ and $\\mathbf{c}_j^K$.\n",
+    ">   - Divide the space up into a 20 by 20 grid, and give each gridpoint an index $i$ in the range 1-400. \n",
+    ">   - Now represent each clustering as a vector $\\mathbf{c}^K$, which where the $j$th entry $c_j^K$ is given by the number of centroids in that gridpoint. Most of the entries will be zero, and we have that $\\sum_{j = 1}^{400} c_j^K = K$.\n",
+    ">   - We now define _stability_ for some value of $K$ as average pairwise similarity of the $N$ clusterings, where the similarity between clustering $i$ and $j$ is the cosine distance between clustering vectors $\\mathbf{c}^K(i)$ and $\\mathbf{c}^K(j)$.\n",
     ">   - We now say that the right $K$ maximizes stability.\n",
     "> * Explain why stability should help you find the right number of clusters.\n",
     "> * **Optional**: Perform stability analysis on the prostitution data. "
