--- a/lectures/Week7.ipynb
+++ b/lectures/Week7.ipynb
@@ -65,7 +65,7 @@
    "source": [
     "# Andrea gives a first lecture on some of the theoretical elements underlying good visualizations\n",
     "from IPython.display import YouTubeVideo\n",
-    "#YouTubeVideo(\"[PLACEHOLDER]\",width=600, height=338)"
+    "YouTubeVideo(\"7a7ZpKQzRzE\",width=600, height=338)"
    ]
   },
   {
@@ -155,7 +155,7 @@
     "> * Click on something to toggle between the two (or more) datasets.\n",
     "> * Feel free to color and label according to your own taste.\n",
     ">\n",
-    "> As last time, this visualization should be live on your own personal web-page. When we evaluate your work, we'll use view source to inspect your code."
+    "> As last time, this visualization should be live on your own personal web-page. When we evaluate your work, we'll use \"view source\" to inspect your code."
    ]
   },
   {
