clarified wording of the assignment

--- a/lectures/Week7.ipynb
+++ b/lectures/Week7.ipynb
@@ -57,11 +57,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "        <iframe\n",
+       "            width=\"600\"\n",
+       "            height=\"338\"\n",
+       "            src=\"https://www.youtube.com/embed/7a7ZpKQzRzE\"\n",
+       "            frameborder=\"0\"\n",
+       "            allowfullscreen\n",
+       "        ></iframe>\n",
+       "        "
+      ],
+      "text/plain": [
+       "<IPython.lib.display.YouTubeVideo at 0x104945950>"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Andrea gives a first lecture on some of the theoretical elements underlying good visualizations\n",
     "from IPython.display import YouTubeVideo\n",
@@ -137,7 +159,7 @@
     "> 1. Text describing visualization 2. Assume that the reader hasn't read this exercise.\n",
     "> 1. Visualization 2\n",
     ">\n",
-    "> Both visualizations should pull data from associated CSV files. Both visualizations should use appropriate dynamic scales (see chapter 7 of IDV). Additional requirements for the visualizations are listed below\n",
+    "> Both visualizations should pull data from associated CSV/JSON files (it's easiest to use Python to generate a nicely formatted file that contains _only the data you need for the visualization). Both visualizations should use appropriate dynamic scales (see chapter 7 of IDV). Additional requirements for the visualizations are listed below\n",
     ">\n",
     "> _Visualization 1_. One scatter plot and two datasets.\n",
     "> * Each point should correspond to a district\n",
