--- a/lectures/Week7.ipynb
+++ b/lectures/Week7.ipynb
@@ -159,7 +159,7 @@
     "> 1. Text describing visualization 2. Assume that the reader hasn't read this exercise.\n",
     "> 1. Visualization 2\n",
     ">\n",
-    "> Both visualizations should pull data from associated CSV/JSON files (it's easiest to use Python to generate a nicely formatted file that contains _only the data you need for the visualization). Both visualizations should use appropriate dynamic scales (see chapter 7 of IDV). Additional requirements for the visualizations are listed below\n",
+    "> Both visualizations should pull data from associated CSV/JSON files (it's easiest to use Python to generate a nicely formatted file that contains _only the data you need for the visualization_). Both visualizations should use appropriate dynamic scales (see chapter 7 of IDV). Additional requirements for the visualizations are listed below\n",
     ">\n",
     "> _Visualization 1_. One scatter plot and two datasets.\n",
     "> * Each point should correspond to a district\n",
