--- a/lectures/Week8.ipynb
+++ b/lectures/Week8.ipynb
@@ -58,13 +58,13 @@
     "\n",
     "For this final exercise we will visualize your results from the $K$-means exercise from last time.\n",
     "\n",
-    "> _Exercise_: We try our luck with an _interactive_ geospatial visualization displaying results for $K = 2,\\ldots,6$. The overall idea is each value of $K$ has an associated view (you should be able to toggle between these) where each of the $K$ centroids is shown as a large colored dot (you choose the color scheme), and all GPS points belonging to that centroid are colored using a related RGB value.\n",
+    "> _Exercise_: We try our luck with an geospatial visualization displaying results for $K = 2,\\ldots,6$. The overall idea is each value of $K$ has an associated view (you should be able to toggle between these) where each of the $K$ centroids is shown as a large colored dot (you choose the color scheme), and all GPS points belonging to that centroid are colored using a related RGB value.\n",
     "\n",
     "You may find that following the steps below are helpful\n",
-    "* Create a CVS/JSON file containing the data you with to visualize.\n",
-    "* Start by simply creating a map of the SFPD Districts using the GeoJSON shapefiles we've lovingly found for you. You get to choose the color and other parameters.\n",
-    "* Think about how you want to do the toggling. We recommend building 5 simple buttons you can push.\n",
-    "  - [Optional]. It would be cool to select each view by clicking a button, and being able to \"preview\" results for some $K$ simply by doing a mouse-over of the associated button.\n",
+    "* Using Python, create a CVS/JSON file containing the data you wish to visualize.\n",
+    "* Start by simply creating a map of the SFPD Districts using the [GeoJSON shapefiles we've lovingly found for you](https://raw.githubusercontent.com/suneman/socialdataanalysis2016/master/files/sfpddistricts.geojson). You get to choose the color and other parameters.\n",
+    "* Think about how you want to do the toggling. We recommend building 5 simple buttons you can click.\n",
+    "  - [Optional but very cool!]. You can make your visualization interactive by adding the following functionality. Select each view by clicking a button (standard) but then add the ability to \"preview\" results for some other value of $K$ simply by doing a hover-over of the associated button.\n",
     "* Start by creating the view for $K = 2$, then generalizing."
    ]
   },
