--- a/lectures/Week8.ipynb
+++ b/lectures/Week8.ipynb
@@ -87,7 +87,7 @@
     "* You can add the PD District name to the map by adding a * text * for each of the features in the geojson file. Like this:                     \n",
     "> .data(json.features).enter().append(\"text\")\n",
     "\n",
-    "* How can the labels be po?"
+    "* How can the labels be positioned?"
    ]
   }
  ],
