--- a/lectures/Week8.ipynb
+++ b/lectures/Week8.ipynb
@@ -63,7 +63,7 @@
     "You may find that following the steps below are helpful\n",
     "* Using Python, create a CVS/JSON file containing the data you wish to visualize.\n",
     "    * The datapoints you should use, is the same as for week 5, so it is all crimes with type = `PROSTITUTION`\n",
-    "    * ** Note **: Think carefully about how you can minimize the size of the file containing the data. My file is around 700KB. Why is the size important?\n",
+    "    * ** Note **: Think carefully about how you can minimize the size of the file containing the data. My file is around 700KB. Why is the size of the file important?\n",
     "* Start by simply creating a map of the SFPD Districts using the [GeoJSON shapefiles we've lovingly found for you](https://raw.githubusercontent.com/suneman/socialdataanalysis2016/master/files/sfpddistricts.geojson). You get to choose the color and other parameters.\n",
     "    * You can find help in chapter 12 in the IDV book. \n",
     "    * ** Note ** : If you do not see anything, take a look at the  `scale ` value, and understand the purpose of it. \n",
@@ -79,9 +79,9 @@
     "collapsed": true
    },
    "source": [
-    "## [OPTIONAL] Playing around with the geodata\n",
+    "## [OPTIONAL] More visualizing of the geodata\n",
     "\n",
-    "If you want to play a bit more with D3 and the geodata, then try make a plot like [this](https://raw.githubusercontent.com/suneman/socialdataanalysis2016/master/files/week8_2.png), where you color each district according to crime count. \n",
+    "If you want to play a bit more with D3 and the geodata, then try make a plot like [this](https://raw.githubusercontent.com/suneman/socialdataanalysis2016/master/files/week8_2.png), where you color each district according to the crime count. \n",
     "* Using python create a json/csv file containing the names of each of the 10 districts and their crime count.\n",
     "* In chapter 12 you can get help to make the color scale according to the max and min crime count. \n",
     "* You can add the PD District name to the map by adding a * text * for each of the features in the geojson file. Like this:                     \n",
