added link to video

--- a/lectures/Week8.ipynb
+++ b/lectures/Week8.ipynb
@@ -12,9 +12,7 @@
     "* Watch the final video on Visualization theory\n",
     "* Solve an exercise plotting the results from our $K$-means exercise from Week 5.\n",
     "\n",
-    "So without further ado, let's get started!\n",
-    "\n",
-    "**WARNING**: THIS IS A ROUGH DRAFT. PROCEED WITH CAUTION."
+    "So without further ado, let's get started!"
    ]
   },
   {
@@ -39,15 +37,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "        <iframe\n",
+       "            width=\"600\"\n",
+       "            height=\"338\"\n",
+       "            src=\"https://www.youtube.com/embed/yM6ulo0zcGE\"\n",
+       "            frameborder=\"0\"\n",
+       "            allowfullscreen\n",
+       "        ></iframe>\n",
+       "        "
+      ],
+      "text/plain": [
+       "<IPython.lib.display.YouTubeVideo at 0x1063cd950>"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Andrea gives a second lecture on the theoretical elements underlying good visualizations\n",
+    "# Andrea gives his third and final lecture on the theoretical elements underlying good visualizations\n",
     "from IPython.display import YouTubeVideo\n",
-    "#YouTubeVideo(\"[PLACEHOLDER]\",width=600, height=338)"
+    "YouTubeVideo(\"yM6ulo0zcGE\",width=600, height=338)"
    ]
   },
   {
