Updated week 8 text

--- a/lectures/Week8.ipynb
+++ b/lectures/Week8.ipynb
@@ -101,13 +101,19 @@
    "source": [
     "## [OPTIONAL] More visualizing of the geodata\n",
     "\n",
-    "If you want to play a bit more with D3 and the geodata, then try make a plot like [this](https://raw.githubusercontent.com/suneman/socialdataanalysis2016/master/files/week8_2.png), where you color each district according to the crime count. \n",
-    "* Using python create a json/csv file containing the names of each of the 10 districts and their crime count.\n",
+    "If you want to play a bit more with D3 and the geodata, then try make a plots like those two:\n",
+    "* [This one](https://raw.githubusercontent.com/suneman/socialdataanalysis2016/master/files/week8_2.png), color each district according to the crime count. \n",
+    "* [This one](https://raw.githubusercontent.com/suneman/socialdataanalysis2016/master/files/week8_3.png), where the prositution is shown, the size of the pie charts is proportional to  thenumber of cases and the pie charts shows the distribution among days of the week\n",
+    "\n",
+    "A bit of help could be:\n",
+    "* Again use python create to a json/csv file containing the corresponding data. For example for visualiation 1 needs the names of each of the 10 districts and their crime count.\n",
     "* In chapter 12 you can get help to make the color scale according to the max and min crime count. \n",
+    "* In chapter 11, you can get help to make a pie chart. \n",
     "* You can add the PD District name to the map by adding a * text * for each of the features in the geojson file. Like this:                     \n",
     "> .data(json.features).enter().append(\"text\")\n",
     "\n",
-    "* How can the labels be positioned?"
+    "* Think about how can the labels be positioned? A help could be to use the centroid for each of the districts. \n",
+    "    "
    ]
   }
  ],
