Assignment 2 beta 1 uploaded

--- a/assignments/Assignment2.ipynb
+++ b/assignments/Assignment2.ipynb
@@ -72,7 +72,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Assignment 2C: One barchart and two datasets\n",
+    "## Assignment 2C: One barchart and (at least) two datasets\n",
     "\n",
     "This barchart visualization should also pull data from an associated CSV/JSON file. Here, Once again, you should use appropriate dynamic scales (see chapter 7 of IDV). Additional requirements for the visualizations are listed below\n",
     "\n",
@@ -98,29 +98,6 @@
     "* Start by simply creating a map of the SFPD Districts using the [GeoJSON shapefiles we've lovingly found for you](https://raw.githubusercontent.com/suneman/socialdataanalysis2016/master/files/sfpddistricts.geojson). You get to choose the color and other parameters.\n",
     "    * You can find help in chapter 12 in the IDV book. \n",
     "    * ** Note** : If you do not see anything, take a look at the  `scale ` value, and understand the purpose of it. \n",
-    "* Start by creating the view for $K = 2$, then generalizing.\n",
-    "* Think about how you want to do the toggling. We recommend building 5 simple buttons you can click.\n",
-    "  - *[Optional but very cool!]*. You can make your visualization interactive by adding the following functionality. Select each view by clicking a button (standard) but then add the ability to \"preview\" results for some other value of $K$ simply by doing a hover-over of the associated button.\n",
-    "* Make the map as fancy as you like. "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Visualizing geodata\n",
-    "\n",
-    "For this final exercise we will visualize your results from the $K$-means exercise from **week 5**.\n",
-    "\n",
-    "> _Exercise_: We try our luck with an geospatial visualization displaying results for $K = 2,\\ldots,6$. The overall idea is each value of $K$ has an associated view (you should be able to toggle between these) where each of the $K$ centroids is shown as a large colored dot (you choose the color scheme), and all GPS points belonging to that centroid are colored using a related RGB value. [My plot looks like this](https://raw.githubusercontent.com/suneman/socialdataanalysis2016/master/files/week8_1.png)\n",
-    "\n",
-    "You may find that following the steps below are helpful\n",
-    "* Using Python, create a CVS/JSON file containing the data you wish to visualize.\n",
-    "    * The datapoints you should use, is the same as for week 5, so it is all crimes with type = `PROSTITUTION`\n",
-    "    * ** Note **: Think carefully about how you can minimize the size of the file containing the data. My file is around 700KB. Why is the size of the file important?\n",
-    "* Start by simply creating a map of the SFPD Districts using the [GeoJSON shapefiles we've lovingly found for you](https://raw.githubusercontent.com/suneman/socialdataanalysis2016/master/files/sfpddistricts.geojson). You get to choose the color and other parameters.\n",
-    "    * You can find help in chapter 12 in the IDV book. \n",
-    "    * ** Note ** : If you do not see anything, take a look at the  `scale ` value, and understand the purpose of it. \n",
     "* Start by creating the view for $K = 2$, then generalizing.\n",
     "* Think about how you want to do the toggling. We recommend building 5 simple buttons you can click.\n",
     "  - *[Optional but very cool!]*. You can make your visualization interactive by adding the following functionality. Select each view by clicking a button (standard) but then add the ability to \"preview\" results for some other value of $K$ simply by doing a hover-over of the associated button.\n",
