--- a/assignments/Assignment2.ipynb
+++ b/assignments/Assignment2.ipynb
@@ -23,13 +23,15 @@
    "source": [
     "## Assignment format\n",
     "\n",
-    "This time you will _not_ be handing in an IPython Notebook, but a link to a webpage full of your `D3.js` visualizations (recall that we've discussed ideas for hosting during week 6). The webpage should be organized into blocks corresponding to the sub-assignments you're solving. Within the webpage, please use an `<h2>` tag to denote each exercise ... something like\n",
+    "This time you will _not_ be handing in an IPython Notebook, but a link to a webpage full of your `D3.js` visualizations (recall that we've discussed ideas for hosting during week 6). The webpage should one single page be organized into blocks corresponding to the sub-assignments you're solving. Within the webpage, please use an `<h2>` tag to denote each exercise ... something like\n",
     "```\n",
     "<h2>Assignment 2A: Simple SVG stuff</h2>\n",
     "```\n",
-    "Also add a little text before each visualization explaining what we're looking at.\n",
+    "Also add a little text before each visualization explaining what we're looking at. Feel free to make the page as fancy as you like (it's always nice when the page looks good), but we will be grading based on the quality of your D3.js visualizations.\n",
     "\n",
-    "When we evaluate your work, we'll use \"view source\" to inspect your code."
+    "When we evaluate your work, we'll also use \"view source\" to inspect your D3 code.\n",
+    "\n",
+    "**Final important thing**: Make sure that the this page remains up until you've received a final grade for this class."
    ]
   },
   {
@@ -87,9 +89,10 @@
    "source": [
     "## Assignment 2D: Visualizing geodata\n",
     "\n",
-    "For this final sub-assignment we will visualize your results from the $K$-means exercise from **week 5**.\n",
+    "For this final sub-assignment we will visualize your results from the $K$-means exercise from **week 5**. \n",
     "\n",
-    "We try our luck with an geospatial visualization displaying results for $K = 2,\\ldots,6$. The overall idea is each value of $K$ has an associated view (you should be able to toggle between these) where each of the $K$ centroids is shown as a large colored dot (you choose the color scheme), and all GPS points belonging to that centroid are colored using a related RGB value. [My plot looks like this](https://raw.githubusercontent.com/suneman/socialdataanalysis2016/master/files/week8_1.png)\n",
+    "* We try our luck with an geospatial visualization displaying results for $K = 2,\\ldots,6$. The overall idea is each value of $K$ has an associated view (you should be able to toggle between these) where each of the $K$ centroids is shown as a large colored dot (you choose the color scheme), and all GPS points belonging to that centroid are colored using a related RGB value. [My plot looks like this](https://raw.githubusercontent.com/suneman/socialdataanalysis2016/master/files/week8_1.png).\n",
+    "* Also please add free to add a link to your IPython notebook with the solution to the $K$-means exercise\n",
     "\n",
     "You may find that following the steps below are helpful\n",
     "* Using Python, create a CVS/JSON file containing the data you wish to visualize.\n",
@@ -97,7 +100,7 @@
     "    * ** Note**: Think carefully about how you can minimize the size of the file containing the data. My file is around 700KB. Why is the size of the file important?\n",
     "* Start by simply creating a map of the SFPD Districts using the [GeoJSON shapefiles we've lovingly found for you](https://raw.githubusercontent.com/suneman/socialdataanalysis2016/master/files/sfpddistricts.geojson). You get to choose the color and other parameters.\n",
     "    * You can find help in chapter 12 in the IDV book. \n",
-    "    * ** Note** : If you do not see anything, take a look at the  `scale ` value, and understand the purpose of it. \n",
+    "    * ** Note** : If you do not see anything, take a look at the `scale ` value, and understand the purpose of it. \n",
     "* Start by creating the view for $K = 2$, then generalizing.\n",
     "* Think about how you want to do the toggling. We recommend building 5 simple buttons you can click.\n",
     "  - *[Optional but very cool!]*. You can make your visualization interactive by adding the following functionality. Select each view by clicking a button (standard) but then add the ability to \"preview\" results for some other value of $K$ simply by doing a hover-over of the associated button.\n",
