Assignment 2 beta 4 uploaded

--- a/assignments/Assignment2.ipynb
+++ b/assignments/Assignment2.ipynb
@@ -42,10 +42,7 @@
     "\n",
     "Put something simple on the web. For this exercise, I want you to modify a bit of code from IDV Chapter 5.\n",
     "\n",
-    "* Create your own version of example 5-14 with the following tweaks\n",
-    " - It should go on the website you've just set up\n",
-    " - You should modify the website's global style file to bold, 24 pt, sans-serif font.\n",
-    "* Add some SVG graphics below the D3. Create an new version of the 5 SVG squares in example 3-22. Make the following modifications\n",
+    "* Create your own version of example 5-14 with the following tweaks. Add some SVG graphics below the D3. Create an new version of the 5 SVG squares in example 3-22. Make the following modifications\n",
     " - Add a gray boundary of width 2.\n",
     " - Make the squares increasingly transparant from left to right.\n",
     " - Make the squares 80 by 80 instead of 30 by 30.\n",
@@ -92,7 +89,7 @@
     "For this final sub-assignment we will visualize your results from the $K$-means exercise from **week 5**. \n",
     "\n",
     "* We try our luck with an geospatial visualization displaying results for $K = 2,\\ldots,6$. The overall idea is each value of $K$ has an associated view (you should be able to toggle between these) where each of the $K$ centroids is shown as a large colored dot (you choose the color scheme), and all GPS points belonging to that centroid are colored using a related RGB value. [My plot looks like this](https://raw.githubusercontent.com/suneman/socialdataanalysis2016/master/files/week8_1.png).\n",
-    "* Also please add free to add a link to your IPython notebook with the solution to the $K$-means exercise\n",
+    "* Also please add a link to your IPython notebook containing only the solution to the $K$-means exercise from week 5 so we can check it out, if necessary.\n",
     "\n",
     "You may find that following the steps below are helpful\n",
     "* Using Python, create a CVS/JSON file containing the data you wish to visualize.\n",
