--- a/assignments/Assignment2.ipynb
+++ b/assignments/Assignment2.ipynb
@@ -4,9 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Assignment 2.\n",
+    "# Assignment 2\n",
     "\n",
-    "## Formalia:\n",
+    "## Formalia\n",
     "\n",
     "Please read the [assignment overview page](https://github.com/suneman/socialdataanalysis2016/wiki/Assignments) carefully before proceeding. This page contains information about formatting (including formats etc), group sizes, and many other aspects of handing in the assignment. \n",
     "\n",
