--- a/assignments/Assignment2.ipynb
+++ b/assignments/Assignment2.ipynb
@@ -42,8 +42,8 @@
     "\n",
     "Put something simple on the web. For this exercise, I want you to modify a bit of code from IDV Chapter 5.\n",
     "\n",
-    "* Create your own version of example 5-14 with the following tweaks. Add some SVG graphics below the D3. Create an new version of the 5 SVG squares in example 3-22. Make the following modifications\n",
-    " - Add a gray boundary of width 2.\n",
+    "* Create an new version of the 5 SVG squares in example 3-22. Make the following modifications\n",
+    " - Add a gray boundary of width 2 around each square.\n",
     " - Make the squares increasingly transparant from left to right.\n",
     " - Make the squares 80 by 80 instead of 30 by 30.\n",
     " - Make the squares go from bottom of the SVG element to the top instead of the other way around."
